--- a/maui_nui_crop_monitor/usgs_water_animation.html
+++ b/maui_nui_crop_monitor/usgs_water_animation.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     body { margin:0; background:#0b1220; color:#e8eefc; font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;}
-    #wrap { max-width:1100px; margin:24px auto 48px; padding:0 16px; }
+    #wrap { max-width:800px; margin:24px auto 48px; padding:0 16px; }
     canvas { border-radius:12px; box-shadow:0 10px 30px rgba(0,0,0,.35); }
     .row { display:flex; gap:12px; align-items:center; margin:12px 0 6px; flex-wrap:wrap;}
     button, select { background:#172038; color:#e8eefc; border:1px solid #30406a; border-radius:10px; padding:8px 12px; font-size:14px; cursor:pointer; }
@@ -22,6 +22,7 @@
   <h1 style="margin:0 0 8px">Water Into a Cup — USGS Streamflow Timelapse</h1>
   <div class="row">
     <button id="playBtn">▶ Play</button>
+    <button id="restartBtn">↺ Restart</button>
     <label>Speed
       <select id="speedSel">
         <option value="0.5">0.5×</option>
@@ -48,7 +49,7 @@ const WY = 2025;           // water year
 const HIST_YEARS = [1914, 1981, 2010, 2015, 2019, 2022, 2023, 2024];
 
 const COLORS = ['#5cb0ff', '#e8e8e8', '#ff934f']; // Highest, Current, Lowest
-const TITLES = ['Highest (subset)','2025 (Observed)','Lowest (subset)'];
+const TITLES = ['Highest (1981)','2025 (Observed)','Lowest (1914)'];
 const BG = '#0b1220', PANEL = '#0f1628', RIM = '#7e8bb6', GRID = '#243255';
 
 /* ================== STATE ================== */
@@ -61,8 +62,12 @@ let monthTicks = [];
 
 /* ========== USGS helpers ========== */
 const fmt = (d) => d.toISOString().slice(0,10);
-function wyRange(year){ return {start:fmt(new Date(`${year-1}-10-01T00:00:00Z`)), end:fmt(new Date(`${year}-09-30T00:00:00Z`))}; }
-
+function wyRange(year){
+  return {
+    start: fmt(new Date(`${year-1}-10-01T00:00:00Z`)),
+    end:   fmt(new Date(`${year}-09-30T00:00:00Z`))
+  };
+}
 async function fetchDVRaw(site, startISO, endISO){
   const url=`https://waterservices.usgs.gov/nwis/dv/?format=json&sites=${site}&parameterCd=${PARAM}&startDT=${startISO}&endDT=${endISO}`;
   const r=await fetch(url);
@@ -104,7 +109,10 @@ function buildMonthTicksFromLabels(lbls){
   for(let i=0;i<lbls.length;i++){
     const d = new Date(lbls[i] + 'T00:00:00Z');
     const m = d.getUTCMonth();
-    if (m !== prevMonth) { ticks.push({ i, label: `${months[m]} ${d.getUTCFullYear()}` }); prevMonth = m; }
+    if (m !== prevMonth) {
+      ticks.push({ i, label: `${months[m]} ${d.getUTCFullYear()}` });
+      prevMonth = m;
+    }
   }
   return ticks;
 }
@@ -112,7 +120,19 @@ function buildMonthTicksFromLabels(lbls){
 /* ========== p5 setup ========== */
 async function setup(){
   const c=createCanvas(W,H); c.parent('p5-holder'); frameRate(60);
-  document.getElementById('playBtn').onclick=()=>{playing=!playing;document.getElementById('playBtn').textContent=playing?'⏸ Pause':'▶ Play';};
+
+  // Hook up UI
+  document.getElementById('playBtn').onclick = () => {
+    playing = !playing;
+    document.getElementById('playBtn').textContent = playing ? '⏸ Pause' : '▶ Play';
+  };
+  // Restart button
+document.getElementById('restartBtn').onclick = () => {
+  t = 0;
+  playing = true;
+  document.getElementById('playBtn').textContent = '⏸ Pause';
+};
+
   document.getElementById('speedSel').onchange=(e)=>speedMult=parseFloat(e.target.value);
 
   try{
@@ -153,14 +173,20 @@ async function setup(){
     globalMax=Math.max(...raw.highest);
     monthTicks = buildMonthTicksFromLabels(labels.slice(0,n));
 
+    // auto-play once loaded
     playing=true;
     document.getElementById('playBtn').textContent='⏸ Pause';
-  }catch(e){ console.warn("USGS fetch failed",e); }
+  }catch(e){
+    console.warn("USGS fetch failed",e);
+  }
 }
 
 function draw(){
   background(BG);
-  if(!raw){fill('#9fb1d9');textAlign(CENTER,CENTER);text("Loading USGS data…",W/2,H/2);return;}
+  if(!raw){
+    fill('#9fb1d9');textAlign(CENTER,CENTER);text("Loading USGS data…",W/2,H/2);
+    return;
+  }
   computeCupLayout();
   drawHeader();
 
@@ -169,7 +195,10 @@ function draw(){
   for (let k=0;k<3;k++){ drawCup(cups[k], vals[k]/globalMax, COLORS[k], TITLES[k], vals[k]); }
   drawMiniChart(i);
 
-  if(playing){ t+=0.5*speedMult; if(t>=raw.current.length-1){t=raw.current.length-1;playing=false;document.getElementById('playBtn').textContent='▶ Play';} }
+  if(playing){
+    t+=0.5*speedMult;
+    if(t>=raw.current.length-1){ t=raw.current.length-1; playing=false; document.getElementById('playBtn').textContent='▶ Play'; }
+  }
 }
 
 /* ========== Drawing helpers ========== */
